--- a/src/style.css
+++ b/src/style.css
@@ -7,13 +7,15 @@ body {
 }
 h1 {
   font-family: "Montserrat", sans-serif;
-  font-size: 43px;
+  font-size: 41px;
+  font-weight: 500;
   margin: 0;
 }
 
 h2 {
   font-family: "Montserrat", sans-serif;
-  font-size: 33px;
+  font-size: 30px;
+  font-weight: 300;
   margin: 0;
 }
 
@@ -54,6 +56,11 @@ label {
 p {
   margin: 0;
   font-size: 18px;
+}
+
+p.day {
+  font-weight: 400;
+  font-size: 16px;
 }
 
 footer {
@@ -173,10 +180,12 @@ footer {
 
 #high-low {
   text-align: center;
+  font-size: 16px;
 }
 
 #feels-like {
   text-align: center;
+  font-size: 16px;
 }
 
 [type="radio"] {
