--- a/src/style.css
+++ b/src/style.css
@@ -209,3 +209,32 @@ footer {
 .current-temp .active:hover {
   text-decoration: none;
 }
+
+.weather-forecast {
+  margin-top: 20px;
+  text-align: center;
+  color: #000;
+}
+
+.weather-forecast-date {
+  font-size: 16px;
+  opacity: 0.6;
+}
+
+.weather-forecast-temperature-min {
+  opacity: 0.5;
+  padding-left: 3px;
+}
+
+.weather-forecast-temperature-max {
+  padding-right: 3px;
+}
+
+.weather-forecast-temperatures {
+  font-size: 13px;
+}
+
+.weather-icons {
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
