--- a/src/style.css
+++ b/src/style.css
@@ -210,6 +210,12 @@ form {
   line-height: 30px;
   font-size: 14px;
 }
+
+.search-row {
+  display: inline-flex;
+  margin: 0 auto;
+}
+
 .search-box {
   background-color: rgb(255, 255, 255);
   color: rgb(37, 37, 37);
